--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -4,15 +4,11 @@
       "app.config",
       "web.config",
       "Views\\web.config"
-    ],
-    "ConfigUpdaterPath": "ConfigUpdaters"
+    ]
   },
   "PackageUpdater": {
     "PackageMapPath": "PackageMaps",
     "MigrationAnalyzersPackageSource": "https://upgradeassistant.blob.core.windows.net/feed/index.json"
-  },
-  "SourceUpdater": {
-    "SourceUpdaterPath": "SourceUpdaters"
   },
   "TemplateInserter": {
     "TemplatePath": "Templates"
@@ -27,5 +23,8 @@
   "UpgradeAssistantExtensionPaths": "",
   "Portability": {
     "ServiceEndpoint": "https://portability.dot.net"
-  }
+  },
+  "ExtensionServiceProviders": [
+    "Microsoft.DotNet.UpgradeAssistant.Extensions.Default.dll"
+  ]
 }
