--- a/tests/Microsoft.DotNet.UpgradeAssistant.TestHelpers/Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj
+++ b/tests/Microsoft.DotNet.UpgradeAssistant.TestHelpers/Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj
@@ -4,6 +4,9 @@
     <RootNamespace>Microsoft.DotNet.UpgradeAssistant</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac.Extras.Moq" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\components\Microsoft.DotNet.UpgradeAssistant.MSBuild\Microsoft.DotNet.UpgradeAssistant.MSBuild.csproj" />
   </ItemGroup>
