Fix Test runs in AzDO (#189)
* Fix Test runs in AzDO

* Changing some settings to unblock Test run hang

* Try test command instead of custom

* Change projects

* Fix publish test results task

* Delete GH actions

* Rename test projects to have the text tests in the name

* Add AssemblyInfo

* Change setting to use IsUnitTestProject

* Change IntegrationTests too

* Update to 5.0.103

* Resolve merge conflicts

* rename MSBuild Tests

* Fix build break

Co-authored-by: Taylor Southwick <tasou@microsoft.com>

--- a/tests/components/Microsoft.DotNet.UpgradeAssistant.Migrator.Tests/Microsoft.DotNet.UpgradeAssistant.Migrator.Tests.csproj
+++ b/tests/components/Microsoft.DotNet.UpgradeAssistant.Migrator.Tests/Microsoft.DotNet.UpgradeAssistant.Migrator.Tests.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <IsPackable>false</IsPackable>
     <IsUnitTestProject>true</IsUnitTestProject>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Moq" />
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -11,6 +13,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\extensions\default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.csproj" />
+    <ProjectReference Include="..\..\..\src\components\Microsoft.DotNet.UpgradeAssistant.Migrator\Microsoft.DotNet.UpgradeAssistant.Migrator.csproj" />
+    <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
 </Project>
