Update package name and icon

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -5,8 +5,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <IsPackable>true</IsPackable>
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>upgrade-assistant</ToolCommandName>
-    <PackageId>upgrade-assistant</PackageId>
+    <ToolCommandName>dotnet-upgrade-assistant</ToolCommandName>
+    <PackageId>Microsoft.DotNet.UpgradeAssistant.Cli</PackageId>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="appsettings.json">
