--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -6,6 +6,7 @@
     <IsPackable>true</IsPackable>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>dotnet-upgrade-assistant</ToolCommandName>
+    <Description>A tool to assist developers in upgrading .NET Framework applications to .NET 5.</Description>
     <PackageId>Microsoft.DotNet.UpgradeAssistant.Cli</PackageId>
     <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
