--- a/tests/tool/Integration.Tests/IntegrationScenarios/AspNetMvcTemplate/Migrated/NuGet.Config
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/AspNetMvcTemplate/Migrated/NuGet.Config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-  <add key="migrationAnalyzerSource" value="https://doesnotexist.net/index.json" />
+  <add key="upgradeAnalyzerSource" value="https://doesnotexist.net/index.json" />
 </packageSources>
 </configuration>
