--- a/tests/steps/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.Tests.csproj
+++ b/tests/steps/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.Tests.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="AutoFixture" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\components\Microsoft.DotNet.UpgradeAssistant.Migrator\Microsoft.DotNet.UpgradeAssistant.csproj" />
+    <ProjectReference Include="..\..\..\src\components\Microsoft.DotNet.UpgradeAssistant\Microsoft.DotNet.UpgradeAssistant.csproj" />
     <ProjectReference Include="..\..\..\src\steps\Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat\Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj" />
     <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
