Fix package source for analyzers

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -8,7 +8,7 @@
   },
   "PackageUpdater": {
     "PackageMapPath": "PackageMaps",
-    "UpgradeAnalyzersPackageSource": "https://upgradeassistant.blob.core.windows.net/feed/index.json"
+    "UpgradeAnalyzersPackageSource": "https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json"
   },
   "TemplateInserter": {
     "TemplatePath": "Templates"
