--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -7,8 +7,7 @@
     ]
   },
   "PackageUpdater": {
-    "PackageMapPath": "PackageMaps",
-    "UpgradeAnalyzersPackageSource": "https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json"
+    "PackageMapPath": "PackageMaps"
   },
   "TemplateInserter": {
     "TemplatePath": "Templates"
