Update PackageUpdaterStep to not add/update nuget.config (#243)
* Fix AppSettingsConfigUpdater to use relative paths for appsettings.json
* Update PackageUpdaterStep to not add/update nuget.config

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -7,8 +7,7 @@
     ]
   },
   "PackageUpdater": {
-    "PackageMapPath": "PackageMaps",
-    "UpgradeAnalyzersPackageSource": "https://upgradeassistant.blob.core.windows.net/feed/index.json"
+    "PackageMapPath": "PackageMaps"
   },
   "TemplateInserter": {
     "TemplatePath": "Templates"
