--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -29,7 +29,10 @@
  <!-- Common properties regarding language version, CA rulesets, output paths, etc. -->
   <PropertyGroup>
     <LangVersion>9.0</LangVersion>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>9999</WarningLevel>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisLevel>latest</AnalysisLevel>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <Nullable>enable</Nullable>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
