--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -35,6 +35,7 @@
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <Nullable>enable</Nullable>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)\rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <!-- Treat warnings as errors in release builds, so that all warnings
