--- a/samples/UpgradeStepSample/UpgradeStepSample/ExtensionManifest.json
+++ b/samples/UpgradeStepSample/UpgradeStepSample/ExtensionManifest.json
@@ -21,6 +21,6 @@
   // or any other type that would be useful to Upgrade Assistant or
   // its extensions.
   "ExtensionServiceProviders": [
-    "UpdateStepSample.dll"
+    "UpgradeStepSample.dll"
   ]
 }
