Re-target extensions infrastructure to netstandard2.0

--- a/src/extensions/Microsoft.DotNet.UpgradeAssistant.Extensions/Microsoft.DotNet.UpgradeAssistant.Extensions.csproj
+++ b/src/extensions/Microsoft.DotNet.UpgradeAssistant.Extensions/Microsoft.DotNet.UpgradeAssistant.Extensions.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <PropertyGroup>
@@ -21,5 +21,6 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
     <PackageReference Include="Microsoft.Extensions.Logging" />
+    <PackageReference Include="System.Collections.Immutable" />
   </ItemGroup>
 </Project>
