--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Backup/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Backup/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
