renamed AspNetSample integration test scenario

--- a/tests/tool/Integration.Tests/Integration.Tests.csproj
+++ b/tests/tool/Integration.Tests/Integration.Tests.csproj
@@ -24,7 +24,7 @@
     <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="IntegrationScenarios\AspNetMvcTemplate\vb\" />
+    <Folder Include="IntegrationScenarios\AspNetSample\vb\" />
     <Folder Include="IntegrationScenarios\WpfSample\vb\" />
   </ItemGroup>
   <Target Name="MoveAnalyzersToSourceUpdatersDir" AfterTargets="Build">
