refactoring TemplateInserter process to be applied per language and per project component

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -10,7 +10,7 @@
     "PackageMapPath": "PackageMaps"
   },
   "TemplateInserter": {
-    "TemplatePath": "Templates"
+    "TemplateConfigFiles": [ "Templates\\CSharpWebAppTemplates\\TemplateConfig.json" ]
   },
   "TFMSelector": {
     "CurrentTFMBase": "net5.0",
