--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Templates/CSharpWebAppTemplates/TemplateConfig.json
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Templates/Templates/CSharpWebAppTemplates/TemplateConfig.json
@@ -30,5 +30,6 @@
       "Keywords": []
     }
   ],
-  "UpdateWebAppsOnly": true
+  "TemplateLanguage": "CSharp",
+  "TemplateAppliesTo": [ "Web" ]
 }
