array spans lines

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -10,7 +10,9 @@
     "PackageMapPath": "PackageMaps"
   },
   "TemplateInserter": {
-    "TemplateConfigFiles": [ "Templates\\CSharpWebAppTemplates\\TemplateConfig.json" ]
+    "TemplateConfigFiles": [
+      "Templates\\CSharpWebAppTemplates\\TemplateConfig.json"
+    ]
   },
   "TFMSelector": {
     "CurrentTFMBase": "net5.0",
