--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -19,7 +19,7 @@
     "LTSTFMBase": "net5.0"
   },
   "TryConvertProjectConverter": {
-    "TryConvertPath": "%USERPROFILE%\\.dotnet\\tools\\try-convert.exe"
+    "TryConvertPath": "./tools/try-convert.exe"
   },
   "UpgradeAssistantExtensionPaths": "",
   "Portability": {
