--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ launchSettings.json
 
 # Bundled dotnet tools
 /src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/tools
+/tests/tool/Integration.Tests/tools/
