--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -9,6 +9,7 @@
     <Description>A tool to assist developers in upgrading .NET Framework applications to .NET 5.</Description>
     <PackageId>upgrade-assistant</PackageId>
     <PackageIcon>icon.png</PackageIcon>
+    <InstallTools>true</InstallTools>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="appsettings.json">
@@ -55,5 +56,4 @@
     <ProjectReference Include="..\..\extensions\default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.csproj" />
   </ItemGroup>
 
-  <Import Project="ToolsInstaller.props" />
 </Project>
