Include try-convert as part of build (#322)
* Include try-convert as part of build

This change adds a target that will download try-convert at build time and include it in the package output.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,6 +1,8 @@
 <Project>
   <Import Project="Sdk.targets" Sdk="Microsoft.DotNet.Arcade.Sdk" />
 
+  <Import Project="$(MSBuildThisFileDirectory)/ToolsInstaller.targets" />
+
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers">
       <PrivateAssets>All</PrivateAssets>
