--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,8 @@ PublishScripts/
 launchSettings.json
 
 .packages/
+/.dotnet
+
+# Bundled dotnet tools
+/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/tools
+/tests/tool/Integration.Tests/tools/
